🗒️😅 Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@font-face{
-  font-family: water;
+@font-face {
+  font-family:water;
   src: url("https://cdn.glitch.global/97f7bbb3-2cd9-4b34-bbf2-d0a28c71f10b/Water%20Park.ttf?v=1738683075854");
 }
 
@@ -8,19 +8,16 @@ body {
   text-align: center;
   color: navy;
   margin: auto;
-  font-family: water;
+  font-family:water;
 }
 
-h1{
+h1 {
   font-size: 30px;
 }
 
 #myCanvas {
-  background-image: url("https://seaviewinfo.com/wp-content/uploads/2018/07/SeaScape.jpg");
+  background-image: url("https://th.bing.com/th/id/OIP.W6OzLV2hzYGl4M6XbI_xhQHaE8?rs=1&pid=ImgDetMain");
   background-size: 600px 400px;
   border-radius: 300px;
-  border: 5px solid white;
+  border: 5px solid black;
 }
-
-
-
